<resources>
    <string name="app_name">E_Auction</string>
    <string name="str_my_products">My Products</string>
    <string name="str_offered_products">Offered Products</string>
    <string name="str_search">Search</string>
    <string name="btn_product_details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_username">Username</string>
    <string name="str_login">Login</string>
    <string name="str_password">Password</string>
    <string name="str_tel">Tel</string>
    <string name="txt_product_name">Product name</string>
    <string name="str_initial_price">Initial price</string>
    <string name="str_save">Save</string>
    <string name="txt_initial_price">Initial Price</string>
    <string name="txt_max_bid">Max Bid Offer</string>
    <string name="str_your_bid_offer">your Bid Offer</string>
    <string name="str_ok">Ok</string>
    <string name="str_sold">Sold</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_create_account">Create Account</string>
    <string name="str_logout">Logout</string>
    <string name="str_users_bids">Users Bids</string>
</resources>
