<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="fill_parent" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.AddProductActivity"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">



        <!--  Name Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtProductName"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:hint="@string/txt_product_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtInitialPrice"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      android:hint="@string/str_initial_price" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Signup Button -->
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddProduct"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/str_save"/>


    </LinearLayout>
</ScrollView>