<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.OfferedProductDetailsActivity"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@mipmap/unsold"
                   android:id="@+id/imgIsSold"
                   android:layout_width="wrap_content"
                   android:layout_height="72dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/txt_product_name"
                    android:layout_marginBottom="8dp">

            </TextView>
            <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_blue_light"

                    android:id="@+id/txtProductName"
                    android:text="@string/txt_product_name"
                    android:layout_marginBottom="8dp">

            </TextView>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:background="@android:color/holo_blue_bright"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/txt_initial_price"
                    android:layout_marginBottom="8dp">

            </TextView>
            <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_blue_light"

                    android:textSize="20sp"
                    android:id="@+id/txtInitialPrice"
                    android:text="@string/txt_initial_price"
                    android:layout_marginBottom="8dp">

            </TextView>
        </LinearLayout>


        <LinearLayout android:layout_marginTop="@dimen/item_margins" android:layout_marginBottom="@dimen/item_margins" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="30sp"
            android:text="@string/str_users_bids"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:background="@color/grey"
                android:id="@+id/recyclerViewUsersBids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        <!-- Signup Button -->
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/str_sold"/>



    </LinearLayout>
</ScrollView>